--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,12 +17,12 @@ services:
     volumes:
       - "/home/atrn0/wireguard_config:/config"
       - /lib/modules:/lib/modules
+    networks:
+      - microservices
     sysctls:
       - net.ipv4.conf.all.src_valid_mark=1
     ports:
       - "5182:51820/udp"
-    networks:
-      wg6:
 networks:
-  wg6:
+  microservices:
     external: true
